# kingmaker-bot

./: .gitignore  Cargo.toml  plan.txt  single.sh
llvm-cov-pre-refactor/html/: index.html
src/: bonus.rs  diff_utils.rs  lib.rs  main.rs  roll_context.rs  roll_result.rs
src/actions/: collect_taxes.rs  mod.rs
src/actions/b_commerce/: collect_taxes.rs  improve_lifestyle.rs  mod.rs  trade_commodities.rs
src/actions/c1_leadership/: celebrate_holiday.rs  create_a_masterpiece.rs  mod.rs  prognostication.rs  purchase_commodities.rs  supernatural_solution.rs  take_charge.rs
src/actions/c2_region/: TEMPLATE  build_roads.rs  claim_hex.rs  establish_farmland.rs  establish_work_site.rs  go_fishing.rs  mod.rs
src/actions/c3_civic/: build_structure.rs  mod.rs
src/discord/: mod.rs
src/discord/commands/: action.rs  gm.rs  kingdom.rs  mod.rs  roll.rs
src/rolls/: bonus.rs  mod.rs  roll_context.rs  roll_result.rs
src/spec/: attributes.rs  mod.rs  skills.rs  terrain.rs
src/state/: mod.rs
src/tracker/: mod.rs
src/turns/: mod.rs
tests/: context.rs  feature_tests.rs  kingdom.rs
tests/features/: bonuses.feature
tests/features/actions/2-commerce/: collect-taxes.feature  improve-lifestyle.feature  trade-commodities.feature
tests/features/actions/3a-leadership/: celebrate-holiday.feature  create-a-masterpiece.feature  prognostication.feature  (+4 more)
tests/features/rolls/: rolls.feature
tests/steps/a_givens/: kingdoms.rs  mod.rs  rolls.rs  state.rs  turns.rs
tests/steps/b_whens/: mod.rs  rolls.rs
tests/steps/c_thens/: actions.rs  kingdom.rs  mod.rs  rolls.rs
(+12 files in other folders)
