[package]
name = "kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "kingdom" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
