[package]
name = "kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "feature_tests"
harness = false

[dependencies]
enum-map = "2.6.2"
tracing = "0.1.37"
