[package]
name = "kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "feature_tests"
harness = false

[dependencies]
assert2 = "0.3.11"
enum-map = "2.6.2"
futures = "0.3"
poise = "0.5.6"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }

